--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
         <link rel="shortcut icon" href="template/images/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" type="text/css" href="template/fonts/font-awesome-4.3.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="template/css/stroke.css">
-        <link rel="stylesheet" type="text/css" href="template/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="stroke.css">
+        <link rel="stylesheet" type="text/css" href="bootstrap.css">
         <link rel="stylesheet" type="text/css" href="template/css/animate.css">
         <link rel="stylesheet" type="text/css" href="template/css/prettyPhoto.css">
         <link rel="stylesheet" type="text/css" href="template/css/style.css">
